@startuml

title __TERRATALES's Class Diagram__\n

      abstract class org.un.sdgs.terratales.AMainController {
          + password : PasswordField
          + prompt : Label
          + username : TextField
          {abstract} + onLogInPress()
          {abstract} + onSignUpPress()
      }

      abstract class org.un.sdgs.terratales.AMenuController {
          + createLocationButton()
          + onSignOutPress()
          {abstract} + onViewFavoritesAction()
          {abstract} + onViewLocationAction()
          {abstract} + onViewMapAction()
      }

      class org.un.sdgs.terratales.FavoritesMenuController {
          - descriptionLabel : Label
          - favoritesVbox : VBox
          - locationImage : ImageView
          - nameLabel : Label
          - placeLabel : Label
          - userLabel : Label
          + onViewFavoritesAction()
          + onViewLocationAction()
          + onViewMapAction()
          - changeLocation()
          - initialize()
          - setDropShadow()
      }

      interface org.un.sdgs.terratales.IDatabase {
          {abstract} + load()
      }


      class org.un.sdgs.terratales.LandDatabase {
          {static} - instance : LandDatabase
          - locationList : ArrayList<Location>
          - mapImage : Image
          + LandDatabase()
          {static} + getInstance()
          + getLocationList()
          + getMapImage()
          + load()
      }

      class org.un.sdgs.terratales.Location {
          - description : String
          - image : Image
          - name : String
          - place : String
          - x : int
          - y : int
          + Location()
          + getDescription()
          + getImage()
          + getName()
          + getPlace()
          + getX()
          + getY()
          + setDescription()
          + setImage()
          + setName()
          + setPlace()
          + toString()
      }

      class org.un.sdgs.terratales.LocationMenuController {
          - descriptionField : TextArea
          - descriptionLabel : Label
          - editButton : Button
          - favoriteButton : Button
          {static} - loc : Location
          {static} - locIndex : int
          - locationImage : ImageView
          - nameField : TextField
          - nameLabel : Label
          - nextButton : Button
          - placeField : TextField
          - placeLabel : Label
          - previousButton : Button
          - userLabel : Label
          + changeLocation()
          + changeLocation()
          + editLocation()
          + loadLocationEdit()
          + onChangePicturePress()
          + onClickNext()
          + onClickPrevious()
          + onEditClick()
          + onFavoriteClick()
          + onViewFavoritesAction()
          + onViewLocationAction()
          + onViewMapAction()
          - initialize()
          - setDropShadow()
      }


      class org.un.sdgs.terratales.LoginController {
          + onLogInPress()
          + onSignUpPress()
      }


      class org.un.sdgs.terratales.Main {
          {static} - window : Stage
          + changeScene()
          {static} + getWindow()
          {static} + main()
          + start()
      }

      class org.un.sdgs.terratales.MapMenuController {
          - locationsVbox : VBox
          - mapImage : ImageView
          - mapStack : AnchorPane
          - mapX : int
          - mapY : int
          - mapZoomLevel : int
          - userLabel : Label
          + onViewFavoritesAction()
          + onViewLocationAction()
          + onViewMapAction()
          - initialize()
          - moveMap()
          - onMoveDownAction()
          - onMoveLeftAction()
          - onMoveRightAction()
          - onMoveUpAction()
          - onZoomInAction()
          - onZoomOutAction()
      }

      class org.un.sdgs.terratales.SignupController {
          + onLogInPress()
          + onSignUpPress()
          - checkIfUserExists()
      }

      class org.un.sdgs.terratales.User {
          - favoritesList : ArrayList<Location>
          - password : String
          - username : String
          + User()
          + addFavorites()
          + getFavoritesList()
          + getPassword()
          + getUsername()
          + removeFavorites()
          + toString()
      }

      class org.un.sdgs.terratales.UserDatabase {
          {static} - instance : UserDatabase
          - userList : ArrayList<User>
          + UserDatabase()
          + getCurrentUser()
          {static} + getInstance()
          + getUserList()
          + load()
          + setCurrentUser()
      }


  org.un.sdgs.terratales.FavoritesMenuController -up-|> org.un.sdgs.terratales.AMenuController
  org.un.sdgs.terratales.LandDatabase .up.|> org.un.sdgs.terratales.IDatabase
  org.un.sdgs.terratales.LocationMenuController -up-|> org.un.sdgs.terratales.AMenuController
  org.un.sdgs.terratales.LoginController -up-|> org.un.sdgs.terratales.AMainController
  org.un.sdgs.terratales.Main -up-|> javafx.application.Application
  org.un.sdgs.terratales.MapMenuController -up-|> org.un.sdgs.terratales.AMenuController
  org.un.sdgs.terratales.SignupController -up-|> org.un.sdgs.terratales.AMainController
  org.un.sdgs.terratales.UserDatabase .up.|> org.un.sdgs.terratales.IDatabase
  org.un.sdgs.terratales.UserDatabase o-- org.un.sdgs.terratales.User : currentUser


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
